# Cloud-Native-Project-1

./: .env.example  .gitignore  BRANCH_COMPARISON.md  CLAUDE.md  README.md  alembic.ini  bun-wrapper-prototype.sh  claude-mem-fix-proposal.md  pyproject.toml
.claude/skills/changelog-from-commits/: SKILL.md
.claude/skills/fastapi-patterns/: SKILL.md
.claude/skills/prd-generator/: SKILL.md
.specify/memory/: constitution.md
history/prompts/001-task-api/: 0001-create-task-management-api-specification.spec.prompt.md  0002-revise-spec-for-constitutional-alignment.spec.prompt.md  0003-clarify-task-api-specification.spec.prompt.md  0004-implementation-planning-for-task-api.plan.prompt.md  0005-task-generation-for-task-api.tasks.prompt.md
history/prompts/constitution/: 0001-establish-project-constitution.constitution.prompt.md
migrations/: env.py
migrations/versions/: 8841c93a4000_changed_the_task_table_schema.py  a604b0b59559_create_task_table.py  bfb455a42b9b_change_datetime_columns_to_timezone_.py
specs/001-task-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py
src/api/routes/: tasks.py
src/database/: __init__.py  connection.py
src/models/: __init__.py  task.py
src/repositories/: __init__.py  task_repository.py
src/services/: __init__.py  task_service.py
src/task_management/: __init__.py
src/utils/: logging.py  settings.py
tests/: conftest.py
tests/contract/: __init__.py  test_task_model.py
tests/integration/: __init__.py  test_task_workflows.py
(+20 files in other folders)
